Fix hover style on narrow hero cards. Closes #167

--- a/react/src/stylesheets/components/ContentArea/HeroRolesContainer/HeroRolesList/_HeroRolesList.scss
+++ b/react/src/stylesheets/components/ContentArea/HeroRolesContainer/HeroRolesList/_HeroRolesList.scss
@@ -1,5 +1,6 @@
 .HeroRolesList {
   flex: 1;
+  min-width: 170px;
 
   .role-icon {
     height: 16px;
